# kinematic-morphospace

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.beads/: .beads-credential-key  metadata.json
docs/: index.md  quickstart.md
docs/api/: clustering.md  cross_species.md  data_filtering.md  data_loading.md  data_scaling.md  index.md  labelling.md  null_testing.md  pca_core.md  pca_reconstruct.md  pca_scores.md  plotting.md  rotation.md  species_transform.md  validation.md
docs/superpowers/specs/: 2026-04-03-data-quality-missingness-notebook-design.md
examples/hawks/: 00_ExperimentalSetup.ipynb  01_MarkerReconstructionTrajectories.ipynb  03_RotationCorrection.ipynb  05_BeforeAfterRotation.ipynb  06_RobustnessValidation.ipynb  06b_DataQualityMissingness.ipynb  06b_MissingnessAndSamplingBias.ipynb  07_AlternativeMethods.ipynb  08_IndividualVsSharedModes.ipynb  12_FlightBehaviourContinuum.ipynb  13_IndividualComparisons.ipynb  14_CrossSpeciesGeneralisation.ipynb
src/kinematic_morphospace/: __init__.py  clustering.py  config.py  cross_species.py  data_filtering.py  data_loading.py  data_scaling.py  labelling.py  null_testing.py  pca_core.py  pca_reconstruct.py  pca_scores.py  rotation.py  species_transform.py  validation.py
src/kinematic_morphospace/plotting/: __init__.py  angles.py  clusters.py  components.py  conditions.py  heatmaps.py  markers.py  robustness.py  schematics.py  scores.py  species.py  symmetry.py  trajectories.py  variance.py
src/kinematic_morphospace/preprocessing/: __init__.py  body_frame.py  body_rotation.py  c3d_loader.py  c3d_pipeline.py  calibration.py  coord_transform.py  duplicate_resolution.py  harmonise.py  marker_labelling.py  mat_loader.py  pipeline.py  polygon_labelling.py  shape_tables.py  smoothing.py  stationary.py  time_sync.py  trial_splitting.py  whole_body_pipeline.py
tests/: __init__.py  conftest.py  test_body_rotation.py  test_c3d_preprocessing.py  test_clustering.py  test_cross_species.py  test_data_filtering.py  test_data_loading.py  test_data_scaling.py  test_duplicate_resolution.py  test_labelling.py  test_null_testing.py  test_pca_core.py  test_pca_reconstruct.py  test_pca_regression.py  test_pca_scores.py  test_plotting.py  test_polygon_labelling.py  test_preprocessing.py  test_rotation.py  test_species_transform.py  test_validation.py  test_whole_body_pipeline.py
tests/test_data/: 2024-06-03-TestBilateralMarkers.csv  2024-06-03-TestUnilateralMarkers.csv  TotalWingspans.yml  create_test_data.ipynb
